<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include android:id="@+id/toolbar_search_iconfied" layout="@layout/toolbar_search_iconfied" />

            <RelativeLayout
                android:id="@+id/recent_queries_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/tabItemsColor">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/recent_searches"
                    tools:text="Recent Searches" />

                <TextView
                    android:id="@+id/clear_recent_queries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/clear"
                    android:textColor="@color/blueClearColor"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    tools:listitem="@layout/item_movie_search" />

                <ListView
                    android:id="@+id/listView_recent_queries"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/recent_query_item" />
            </FrameLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>