<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/star"
    app:startDestination="@+id/celebritiesFragment">


    <fragment
        android:id="@+id/celebritiesFragment"
        android:name="com.mustafa.movieguideapp.view.ui.person.celebrities.CelebritiesListFragment"
        android:label="celebritiesFragment"
        tools:layout="@layout/fragment_celebrities">
        <action
            android:id="@+id/action_celebrities_to_celebrity"
            app:destination="@id/celebrityDetail" />

        <action
            android:id="@+id/action_celebrities_to_searchCelebritiesFragment"
            app:destination="@id/searchCelebritiesFragment" />

    </fragment>


    <fragment
        android:id="@+id/celebrityDetail"
        android:name="com.mustafa.movieguideapp.view.ui.person.detail.CelebrityDetailFragment"
        android:label="celebrityDetail"
        tools:layout="@layout/fragment_celebrity_detail">
        <argument
            android:name="person"
            app:argType="com.mustafa.movieguideapp.models.entity.Person" />

        <action
            android:id="@+id/action_celebrityDetail_to_celebritiesFragment"
            app:popUpTo="@id/celebritiesFragment" />

        <action
            android:id="@+id/action_celebrityDetail_to_celebrityMovieDetail"
            app:destination="@id/celebrityMovieDetail" />

        <action
            android:id="@+id/action_celebrityDetail_to_celebrityTvDetail"
            app:destination="@id/celebrityTvDetail" />
    </fragment>


    <fragment
        android:id="@+id/celebrityMovieDetail"
        android:name="com.mustafa.movieguideapp.view.ui.person.detail.MoviePersonDetailFragment"
        android:label="celebrityMovieDetail"
        tools:layout="@layout/fragment_movie_celebrity_detail">
        <argument
            android:name="movie"
            app:argType="com.mustafa.movieguideapp.models.entity.MoviePerson" />
    </fragment>


    <fragment
        android:id="@+id/celebrityTvDetail"
        android:name="com.mustafa.movieguideapp.view.ui.person.detail.TvPersonDetailFragment"
        android:label="celebrityTvDetail"
        tools:layout="@layout/fragment_tv_celebrity_detail">
        <argument
            android:name="tv"
            app:argType="com.mustafa.movieguideapp.models.entity.TvPerson" />
    </fragment>

    <fragment
        android:id="@+id/searchCelebritiesFragment"
        android:name="com.mustafa.movieguideapp.view.ui.person.search.SearchCelebritiesFragment"
        android:label="searchCelebritiesFragment"
        tools:layout="@layout/fragment_celebrities_search">

        <action
            android:id="@+id/action_searchCelebritiesFragment_to_celebritiesFragment"
            app:popUpTo="@id/celebritiesFragment" />

        <action
            android:id="@+id/action_searchCelebritiesFragment_to_searchCelebritiesResultFragment"
            app:destination="@id/searchCelebritiesResultFragment" />

        <action
            android:id="@+id/action_searchCelebritiesFragment_to_celebrityDetail"
            app:destination="@id/celebrityDetail" />
    </fragment>

    <fragment
        android:id="@+id/searchCelebritiesResultFragment"
        android:name="com.mustafa.movieguideapp.view.ui.person.search.SearchCelebritiesResultFragment"
        android:label="searchCelebritiesResultFragment"
        tools:layout="@layout/fragment_celebrities_search_result">
        <action
            android:id="@+id/action_searchCelebritiesResultFragment_to_celebrityDetail"
            app:destination="@id/celebrityDetail" />

        <action
            android:id="@+id/action_searchCelebritiesResultFragment_to_searchCelebritiesFragment"
            app:popUpTo="@id/searchCelebritiesFragment" />

        <argument
            android:name="query"
            app:argType="string" />
    </fragment>


</navigation>