<resources>
    <string name="app_name">MovieGuide</string>
    <string name="fragment_movies">Movies</string>
    <string name="fragment_tvs">Series</string>
    <string name="fragment_celebrities">Celebrities</string>
    <string name="transition_profile">transition_profile</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="empty_search_result">No results for <b>%s</b></string>
    <string name="recent">Recent</string>
    <string name="filter_movies_tab_name">Filter Your Movies</string>
    <string name="filter_series_tab_name">Filter Your Series</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear">CLEAR</string>
    <string name="dialog_message">Clear recent searches and pages?</string>
    <string name="cancel">Cancel</string>
    <string name="see_results">SEE RESULTS</string>

    // Filters titles
    <string name="rating_title">IMDb Rating</string>
    <string name="genre_title">Genre</string>
    <string name="country_title">Country</string>
    <string name="keyword_title">keywords</string>
    <string name="runtime_title">Runtime</string>
    <string name="year_title">Year</string>
    <string name="language_title">Primary Language</string>
    <string name="edit">Edit</string>
    <string name="results">Results</string>

    <!-- Navigation Drawer menu labels -->
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>

    <!-- Dialog filter types -->
    <string name="popularity">Popularity</string>
    <string name="release_date">Release Date</string>
    <string name="vote_count">Vote Count</string>
    <string name="filters">Filters</string>
    <string name="tv_shows_and_series">TV Shows and Series</string>
    <string name="movies">Movies</string>
    <string name="rating">Rating:</string>
    <string name="summary">Summary</string>
</resources>
