<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_text"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginStart="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@color/backgroundDarker"
    android:gravity="center_vertical"
    tools:text="Mustafa" />
